Agregando el page principal mainContent

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,31 @@ appTitle=Home
 appDescription=App Description
 
 sapBTPCockpit=SAP BTP Cockpit
+trialHome=Trial Home
+globalAccount=1a38665btrial
+globalAccountText=Global Account
+subaccountsText=Subaccounts
+subdomainText=Subdomain
+allText=All
+gaText=ga
+newSubaccountText=New Subaccount
+switchGlobalAccountText=Switch Global Account
+deleteTrialAccountText=Delete Trial Account
+allEnviroments=All Enviroments
+multiEnviroment=Multi Enviroment
+allDataCenters=All Data Centers
+usEastAWS=US East (VA) - AWS   cf-us10
+serachSubaccounts=Serach Subaccounts
+subAccountName=trial
+provider=Provider
+amazoWebServices=Amazon Web Services (AWS)
+regionText=Region
+region=US East (VA)
+descriptionText=Description
+description=-none-
+environmentText=Environment
+multiEnvironment=Multi-Environment
+learnText=Learn how global accounts and subaccounts relate to each other and find recommendations for setting up your account model.
 
 
 
